# docflow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_REVIEW_2025-11-26.md  IMPROVEMENTS_2025-11-26.md  QUICKSTART.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.dev/docs/: plan.md  spec.md
docs/guidelines/: 採訪稿_格式說明.md  腳本_格式說明.md
docs/notes/: python_docx_generation.md
docs/sources/: 何大成理事長-原稿.md
input/: 09_化學署專刊_中華民國化學應變協會  何大成理事長-文稿_二版.docx  09_化學署專刊_中華民國化學應變協會  何大成理事長-文稿_二版.docx.md  README.md
outputs/採訪稿/: 採訪稿.md  採訪稿_templete.docx  採訪稿說明.json
scripts/: README.md  convert_docx_to_md.py  generate_doc_outputs.py
templates/: 採訪稿_template.md  腳本_template.md
